--- a/module-1/lab-functional-programming/your-code/main.ipynb
+++ b/module-1/lab-functional-programming/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -194,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def firstn(n):\n",
+    "def first(n):\n",
     "     number = 0\n",
     "     while number < n:\n",
     "         yield number\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "iterator = firstn(5)\n",
+    "iterator = first(5)\n",
     "\n",
     "for i in iterator:\n",
     "    print(i)"
@@ -245,32 +245,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "<generator object even_iterator at 0x10d212d50>\n",
+      "[0, 2, 4]\n"
      ]
     }
    ],
    "source": [
     "def even_iterator(n):\n",
     "    number = 0\n",
-    "    while number < n and number % 2 == 0:\n",
+    "    while number < n:\n",
     "        yield number\n",
-    "        number += 1\n",
-    "    \n",
-    "iterator_cond = even_iterator(5)\n",
-    "for x in iterator_cond:\n",
-    "    print(x)\n",
-    "        "
+    "        number += 2\n",
+    "        \n",
+    "even_numbers = [n for n in even_iterator(5)]\n",
+    "print(even_iterator(5))\n",
+    "print(even_numbers)    "
    ]
   },
   {
@@ -286,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,12 +292,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "columns = ['sepal_length', 'sepal_width', 'petal_length','petal_width','iris_type']\n",
-    "iris = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\", names=columns)"
+    "iris = pd.read_csv(\"http://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\", names = columns)"
    ]
   },
   {
@@ -313,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +394,7 @@
        "4           5.0          3.6           1.4          0.2  Iris-setosa"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +427,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +459,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +467,7 @@
    "source": [
     "# Your code here:\n",
     "#standard deviation over iris\n",
-    "np.std(iris)\n"
+    "np.std(iris)"
    ]
   },
   {
@@ -483,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +558,7 @@
        "4           5.0          3.6           1.4          0.2"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +567,7 @@
     "# Your code here:\n",
     "#iris_numeric = iris.select_dtypes(np.number).head()\n",
     "iris_numeric = iris.select_dtypes(\"number\").head()\n",
-    "iris_numeric\n"
+    "iris_numeric"
    ]
   },
   {
@@ -583,14 +579,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.9685050000000002\n"
+      "0.393701\n"
      ]
     }
    ],
@@ -605,7 +601,7 @@
     "    \n",
     "    # Your code here:\n",
     "    return x * 0.393701\n",
-    "print(cm_to_in(5))\n"
+    "print(cm_to_in(1.0))"
    ]
   },
   {
@@ -617,28 +613,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'DataFrame' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-111-f3e7fe1113cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Your code here:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0miris_inch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miris_numeric\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcm_to_in\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0miris_inch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          0         1         2        3\n",
+      "0  2.007875  1.377954  0.551181  0.07874\n",
+      "1  1.929135  1.181103  0.551181  0.07874\n",
+      "2  1.850395  1.259843  0.511811  0.07874\n",
+      "3  1.811025  1.220473  0.590552  0.07874\n",
+      "4  1.968505  1.417324  0.551181  0.07874\n"
      ]
     }
    ],
    "source": [
     "# Your code here:\n",
+    "iris_inches = cm_to_in(iris_numeric.values)\n",
     "\n",
-    "iris_inch = iris_numeric(cm_to_in).head()\n",
-    "iris_inch\n",
-    "    \n",
-    "    \n"
+    "iris_inch = pd.DataFrame(iris_inches)\n",
+    "iris_inch.rename(columns = {'0': 'sepal_length', 1: 'sepal_width', 2: 'petal_length', 3: 'petal_width'})\n",
+    "print(iris_inch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.007875</td>\n",
+       "      <td>1.377954</td>\n",
+       "      <td>0.551181</td>\n",
+       "      <td>0.07874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.929135</td>\n",
+       "      <td>1.181103</td>\n",
+       "      <td>0.551181</td>\n",
+       "      <td>0.07874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.850395</td>\n",
+       "      <td>1.259843</td>\n",
+       "      <td>0.511811</td>\n",
+       "      <td>0.07874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.811025</td>\n",
+       "      <td>1.220473</td>\n",
+       "      <td>0.590552</td>\n",
+       "      <td>0.07874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.968505</td>\n",
+       "      <td>1.417324</td>\n",
+       "      <td>0.551181</td>\n",
+       "      <td>0.07874</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2        3\n",
+       "0  2.007875  1.377954  0.551181  0.07874\n",
+       "1  1.929135  1.181103  0.551181  0.07874\n",
+       "2  1.850395  1.259843  0.511811  0.07874\n",
+       "3  1.811025  1.220473  0.590552  0.07874\n",
+       "4  1.968505  1.417324  0.551181  0.07874"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris_inch"
    ]
   },
   {
@@ -650,20 +737,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal_length  sepal_width  petal_length  petal_width\n",
+      "0           7.1          5.5           3.4          2.2\n",
+      "1           6.9          5.0           3.4          2.2\n",
+      "2           6.7          5.2           3.3          2.2\n",
+      "3           6.6          5.1           3.5          2.2\n",
+      "4           7.0          5.6           3.4          2.2\n"
+     ]
+    }
+   ],
    "source": [
     "# Define constant below:\n",
     "\n",
-    "\n",
+    "error = 2\n",
     "def add_constant(x):\n",
     "    # This function adds a global constant to our input.\n",
     "    # Input: numeric value\n",
     "    # Output: numeric value\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    \n",
+    "    return x + error\n",
+    "\n",
+    "iris_constant = add_constant(iris_numeric)\n",
+    "\n",
+    "print(iris_constant)"
    ]
   },
   {
@@ -677,12 +782,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    5.1\n",
+      "1    4.9\n",
+      "2    4.7\n",
+      "3    4.6\n",
+      "4    5.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "iris_max = iris_numeric.max(axis = 1)\n",
+    "print(iris_max)"
    ]
   },
   {
@@ -694,20 +814,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "iris_numeric['total_length'] = iris_numeric['sepal_length'] + iris_numeric['petal_length'] \n",
+    "iris_numeric['total_width'] = iris_numeric['sepal_width'] + iris_numeric['petal_width']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal_length  sepal_width  petal_length  petal_width  total_length  \\\n",
+      "0           5.1          3.5           1.4          0.2           6.5   \n",
+      "1           4.9          3.0           1.4          0.2           6.3   \n",
+      "2           4.7          3.2           1.3          0.2           6.0   \n",
+      "3           4.6          3.1           1.5          0.2           6.1   \n",
+      "4           5.0          3.6           1.4          0.2           6.4   \n",
+      "\n",
+      "   total_width  \n",
+      "0          3.7  \n",
+      "1          3.2  \n",
+      "2          3.4  \n",
+      "3          3.3  \n",
+      "4          3.8  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(iris_numeric)"
+   ]
   }
  ],
  "metadata": {
@@ -726,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
